--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "node dist/server/entry.mjs",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "^0.3.4",
+    "@astrojs/node": "^7.0.4",
     "@astrojs/react": "^3.0.9",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
